# EV_Analytics_Platform

./: RAG_FILES_TEST_REPORT.md  README.md  main.py  pyproject.toml  test_agent.py  test_dataset.py  test_evaluator.py  verify_parquet.py
backend/: main.py  requirements.txt  test_datatest.py  test_rag_files.py  test_rag_quick.py
backend/ai/agents/: graph.py  nodes.py  state.py  test_agent.py  test_multi_intent.py  tools.py
backend/ai/rag/: ingestion.py  local_embeddings.py  qa_chain.py  retriever.py
backend/api/: dependencies.py
backend/api/routes/: agent.py  analytics.py  health.py  ml.py  rag.py
backend/core/: config.py  constants.py  database.py  logger.py
backend/data/processed/: processed_data.parquet
backend/data/vector_store/faiss_index/: index.faiss  index.pkl
backend/ev_statistics/: descriptive.py  reports.py  statistical_report.json  visualizations.py
backend/ml/: data_validator.py  ev_type_encoder.pkl  evaluator.py  label_encoder.pkl  metrics.json  predictor.py  preprocessor.py  scaler.pkl  trainer.py
backend/ml/models/: adaboost.pkl  decision_tree.pkl  logistic_regression.pkl  random_forest.pkl  svm.pkl
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Header.jsx  Sidebar.jsx
frontend/src/hooks/: useAgent.js  usePredictor.js  useStatistics.js
frontend/src/pages/: AIAgent.jsx  Dashboard.jsx  MLModels.jsx  Predictor.jsx  RAGSearch.jsx  Statistics.jsx
frontend/src/routes/: AppRoutes.jsx
frontend/src/services/: api.js
